archive/configs/kyverno-policies/templates/default_securitycontext.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-default-securitycontext
  annotations:
    policies.kyverno.io/title: Add Default securityContext
    policies.kyverno.io/subject: Pod
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  rules:
  - name: add-default-securitycontext
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - resources:
          namespaces:
          - kube-system
          - kyverno
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - (name): '*'
            securityContext:
              +(allowPrivilegeEscalation): false
              +(readOnlyRootFilesystem): true
              +(runAsNonRoot): true
              capabilities:
                drop:
                - ALL
              +(seccompProfile):
                type: RuntimeDefault
          ephemeralContainers:
          - (name): '*'
            securityContext:
              +(allowPrivilegeEscalation): false
              +(readOnlyRootFilesystem): true
              +(runAsNonRoot): true
              capabilities:
                drop:
                - ALL
              +(seccompProfile):
                type: RuntimeDefault
          initContainers:
          - (name): '*'
            securityContext:
              +(allowPrivilegeEscalation): false
              +(readOnlyRootFilesystem): true
              +(runAsNonRoot): true
              capabilities:
                drop:
                - ALL
              +(seccompProfile):
                type: RuntimeDefault
